# Trace2Pass

./: .gitignore  ARCHIVE_README.md  KNOWN_ISSUES.md  PROJECT_PLAN.md  README.md  ThesisPlan.docx  Trace2Pass - Preliminary Literature Review (Updated).docx  Trace2Pass - Preliminary Literature Review.docx
.github/workflows/: README.md  build-and-test.yml  lint.yml
benchmarks/redis/: README.md  REDIS_BENCHMARK_RESULTS.md  REDIS_INSTRUMENTATION_FINDINGS.md
benchmarks/sqlite/: SQLITE_BENCHMARK_RESULTS.md  SQLITE_FULL_INSTRUMENTATION_RESULTS.md  sqlite_5checks  sqlite_benchmark.c  sqlite_benchmark_baseline  sqlite_benchmark_hybrid  sqlite_benchmark_instrumented  sqlite_final  sqlite_test
collector/: README.md  requirements.txt
collector/src/: collector.py  models.py  schemas.py
collector/tests/: test_collector.py
diagnoser/: README.md  diagnose.py  requirements.txt
diagnoser/src/: docker_compiler.py  pass_bisector.py  ub_detector.py  version_bisector.py
diagnoser/tests/: test_pass_bisector.py  test_ub_detector.py  test_version_bisector.py
docs/: phase2-design.md  phase2-implementation.md  phase2-instrumentation-design.md  phase2-overhead-analysis.md  phase2-summary.md
docs/phase3/: DESIGN.md
evaluation/: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  README.md  evaluate.py  requirements.txt
evaluation/src/: __init__.py  metrics_collector.py  pipeline_runner.py  report_generator.py  results_aggregator.py  testcase_manager.py
evaluation/testcases/: gcc-108308.c  gcc-110726.c  gcc-115388.c  llvm-60622.c  metadata.json  sample-gvn.c  sample-instcombine.c  sample-licm.c
historical-bugs/: COMPLETION_SUMMARY.md  DATASET_OVERVIEW.md  README.md  bug-dataset.csv
historical-bugs/analysis/: passes.md  patterns.md  summary.md  timeline.md
instrumentor/: CMakeLists.txt  README.md  benchmark.c  benchmark.ll  bug_114182.ll  bug_114182_opt.ll  bug_115458.ll  bug_115458_opt.ll  bug_53218_newgvn.ll  bug_53218_newgvn_opt.ll  bug_64598_after.ll  bug_64598_before.ll  bug_64598_gvn.c  bug_64598_gvn.ll  bug_64598_gvn_mem2reg.ll  bug_64598_gvn_opt.ll  bug_72831_dse.c  bug_72831_dse.ll  bug_72831_dse_opt.ll  measure_combined_overhead.sh  measure_licm_overhead.sh  measure_overhead.sh  measure_overhead_v2.sh  test_combined.c  test_combined.ll  test_combined_opt.ll  test_dse.c  test_dse.ll  test_dse_opt.ll  test_gvn.c  test_gvn.ll  test_gvn_opt.ll  test_licm.c  test_licm.ll  test_licm_opt.ll  test_program.c  test_runner.cpp  test_simple.c  test_simple.ll  test_simple_opt.ll
instrumentor/include/Trace2Pass/: PassInstrumentor.h
instrumentor/src/: HelloPass.cpp  InstrumentedDSEPass.cpp  InstrumentedGVNPass.cpp  InstrumentedInstCombinePass.cpp  InstrumentedLICMPass.cpp  PassInstrumentor.cpp  Trace2PassInstrumentor.cpp
instrumentor/test/: GEP_BOUNDS_TESTS.md  OVERHEAD_RESULTS.md  REAL_BUGS_VALIDATION.md  VALIDATION_RESULTS.md  WEEK9_SAMPLING_EXPERIMENTS.md  analyze_sampling_results.py  benchmark_baseline  benchmark_instrumented  benchmark_overhead  benchmark_overhead.c  comprehensive_test  comprehensive_test.c  manual_test_overflow.c  manual_test_overflow_baseline  manual_test_overflow_instrumented  manual_test_overflow_runtime  manual_test_overflow_runtime.c  run_all_tests.sh  run_bug_tests.sh  run_sampling_experiments.sh  sampling_experiments_20251211_131633.txt  test_arithmetic  test_arithmetic.c  test_bounds  test_bounds.c  test_bounds_advanced  test_bounds_advanced.c  test_bug_49667  test_bug_49667.c  test_bug_64598  test_bug_64598.c  test_bug_97330  test_bug_97330.c  test_bug_97330_O1.ll  test_bug_97330_instrumented.ll  test_bug_97330_uninstrumented.ll  test_counter_reset  test_division_by_zero.c  test_explicit_unsigned.c  test_explicit_unsigned.ll  (+33 more)
reporter/: README.md  report.py  requirements.txt
reporter/src/: __init__.py  reducer.py  report_generator.py  templates.py  workarounds.py
reporter/tests/: __init__.py  test_reporter.py
runtime/: CMakeLists.txt  README.md
runtime/include/: trace2pass_runtime.h
runtime/src/: trace2pass_runtime.c
runtime/test/: test_runtime.c
tests/integration/: README.md  requirements.txt  test_collector_to_diagnoser.py  test_full_pipeline.py  test_full_pipeline_with_reporter.py  test_runtime_to_collector.py
